Fix unnecessary scrolling on Mobile Safari

--- a/src/htsd.css
+++ b/src/htsd.css
@@ -45,8 +45,8 @@ body {
 
 body.htsd--installed {
   visibility: visible;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: var(--htsd-body-bg-color);
 }
 
